ocaml/vine_grammar.output
   0  $accept : %entry% $end

   1  program : stmtlist EOF

   2  stmtlist : revstmtlist

   3  revstmtlist : revstmtlist stmt
   4              |

   5  stmt : jmpstmt SEMI
   6       | specialstmt SEMI
   7       | labelstmt
   8       | COMMENT
   9       | simplestmt SEMI
  10       | func
  11       | vardecls
  12       | stmtblock
  13       | SEMI

  14  jmpstmt : JMP LPAREN expr RPAREN
  15          | CJMP LPAREN expr COMMA expr COMMA expr RPAREN

  16  specialstmt : SPECIAL LPAREN STRING RPAREN

  17  labelstmt : LABEL ID COLON

  18  simplestmt : assignment
  19             | expr
  20             | RETURN optexpr
  21             | HALT expr
  22             | ASSERT expr
  23             | callstmt

  24  assignment : lval ASSIGN expr
  25             | lval ASSIGN callstmt

  26  callstmt : CALL expr LPAREN arguments RPAREN
  27           | ID LPAREN arguments RPAREN

  28  optexpr :
  29          | expr

  30  arguments :
  31            | args

  32  args : expr
  33       | args COMMA expr

  34  func : optextern funtyp ID LPAREN formals RPAREN optbody

  35  funtyp : TVOID
  36         | typ

  37  optextern :
  38            | EXTERN

  39  optbody : SEMI
  40          | stmtblock

  41  formals : formallist
  42          |

  43  formallist : formallist COMMA formal
  44             | formal

  45  formal : ID COLON typ

  46  vardecls : VAR idents COLON typ SEMI

  47  idents : revidents

  48  revidents : ID
  49            | revidents COMMA ID

  50  lcurlyrule : LCURLY

  51  stmtblock : lcurlyrule stmtlist RCURLY

  52  typ : basetyp attrs
  53      | typ LSQUARE typ RSQUARE
  54      | typ LSQUARE INT RSQUARE

  55  basetyp : TYP

  56  attrs :
  57        | ATTR LPAREN idlist RPAREN

  58  idlist : ID
  59         | ID COMMA idlist

  60  lval : ID optindex opttyp

  61  opttyp :
  62         | COLON typ

  63  optindex :
  64           | LSQUARE expr RSQUARE

  65  letstart : LET ID optindex opttyp ASSIGN expr

  66  expr : LPAREN expr RPAREN
  67       | expr PLUS expr
  68       | expr MINUS expr
  69       | expr TIMES expr
  70       | expr DIVIDE expr
  71       | expr SDIVIDE expr
  72       | expr MOD expr
  73       | expr SMOD expr
  74       | expr LSHIFT expr
  75       | expr RSHIFT expr
  76       | expr ARSHIFT expr
  77       | expr AND expr
  78       | expr OR expr
  79       | expr XOR expr
  80       | expr EQUAL expr
  81       | expr NEQ expr
  82       | expr LT expr
  83       | expr LE expr
  84       | expr SLT expr
  85       | expr SLE expr
  86       | expr GT expr
  87       | expr GE expr
  88       | expr SGT expr
  89       | expr SGE expr
  90       | NOT expr
  91       | MINUS expr
  92       | constexp
  93       | UNKNOWN STRING
  94       | NAME LPAREN ID RPAREN
  95       | lval
  96       | letstart IN expr
  97       | CAST LPAREN expr RPAREN ID COLON typ

  98  constexp : TRUE
  99           | FALSE
 100           | INT COLON typ
 101           | STRING

 102  %entry% : '\001' program
 103          | '\002' expr

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . program  (102)
	revstmtlist : .  (4)

	.  reduce 4

	program  goto 4
	stmtlist  goto 5
	revstmtlist  goto 6


state 2
	%entry% : '\002' . expr  (103)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	.  error

	expr  goto 19
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	%entry% : '\001' program .  (102)

	.  reduce 102


state 5
	program : stmtlist . EOF  (1)

	EOF  shift 23
	.  error


state 6
	stmtlist : revstmtlist .  (2)
	revstmtlist : revstmtlist . stmt  (3)
	optextern : .  (37)

	ID  shift 24
	INT  shift 8
	STRING  shift 9
	COMMENT  shift 25
	LPAREN  shift 10
	SEMI  shift 26
	LCURLY  shift 27
	CJMP  shift 28
	NAME  shift 11
	JMP  shift 29
	CAST  shift 12
	VAR  shift 30
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	LABEL  shift 31
	CALL  shift 32
	ASSERT  shift 33
	HALT  shift 34
	SPECIAL  shift 35
	UNKNOWN  shift 16
	RETURN  shift 36
	EXTERN  shift 37
	MINUS  shift 17
	NOT  shift 18
	TYP  reduce 37
	EOF  reduce 2
	RCURLY  reduce 2
	TVOID  reduce 37

	expr  goto 38
	stmt  goto 39
	jmpstmt  goto 40
	specialstmt  goto 41
	labelstmt  goto 42
	simplestmt  goto 43
	func  goto 44
	vardecls  goto 45
	stmtblock  goto 46
	assignment  goto 47
	callstmt  goto 48
	lval  goto 49
	optextern  goto 50
	lcurlyrule  goto 51
	letstart  goto 21
	constexp  goto 22


state 7
	lval : ID . optindex opttyp  (60)
	optindex : .  (63)

	LSQUARE  shift 52
	$end  reduce 63
	LPAREN  reduce 63
	RPAREN  reduce 63
	SEMI  reduce 63
	COLON  reduce 63
	RSQUARE  reduce 63
	COMMA  reduce 63
	IN  reduce 63
	PLUS  reduce 63
	MINUS  reduce 63
	DIVIDE  reduce 63
	MOD  reduce 63
	SMOD  reduce 63
	TIMES  reduce 63
	SDIVIDE  reduce 63
	LSHIFT  reduce 63
	RSHIFT  reduce 63
	ARSHIFT  reduce 63
	XOR  reduce 63
	NEQ  reduce 63
	SLT  reduce 63
	SLE  reduce 63
	AND  reduce 63
	OR  reduce 63
	EQUAL  reduce 63
	LT  reduce 63
	LE  reduce 63
	GT  reduce 63
	GE  reduce 63
	SGT  reduce 63
	SGE  reduce 63

	optindex  goto 53


state 8
	constexp : INT . COLON typ  (100)

	COLON  shift 54
	.  error


state 9
	constexp : STRING .  (101)

	.  reduce 101


state 10
	expr : LPAREN . expr RPAREN  (66)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	.  error

	expr  goto 55
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 11
	expr : NAME . LPAREN ID RPAREN  (94)

	LPAREN  shift 56
	.  error


state 12
	expr : CAST . LPAREN expr RPAREN ID COLON typ  (97)

	LPAREN  shift 57
	.  error


state 13
	letstart : LET . ID optindex opttyp ASSIGN expr  (65)

	ID  shift 58
	.  error


state 14
	constexp : TRUE .  (98)

	.  reduce 98


state 15
	constexp : FALSE .  (99)

	.  reduce 99


state 16
	expr : UNKNOWN . STRING  (93)

	STRING  shift 59
	.  error


state 17
	expr : MINUS . expr  (91)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	.  error

	expr  goto 60
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 18
	expr : NOT . expr  (90)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	.  error

	expr  goto 61
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 19
	expr : expr . PLUS expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . TIMES expr  (69)
	expr : expr . DIVIDE expr  (70)
	expr : expr . SDIVIDE expr  (71)
	expr : expr . MOD expr  (72)
	expr : expr . SMOD expr  (73)
	expr : expr . LSHIFT expr  (74)
	expr : expr . RSHIFT expr  (75)
	expr : expr . ARSHIFT expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . XOR expr  (79)
	expr : expr . EQUAL expr  (80)
	expr : expr . NEQ expr  (81)
	expr : expr . LT expr  (82)
	expr : expr . LE expr  (83)
	expr : expr . SLT expr  (84)
	expr : expr . SLE expr  (85)
	expr : expr . GT expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . SGT expr  (88)
	expr : expr . SGE expr  (89)
	%entry% : '\002' expr .  (103)

	PLUS  shift 62
	MINUS  shift 63
	DIVIDE  shift 64
	MOD  shift 65
	SMOD  shift 66
	TIMES  shift 67
	SDIVIDE  shift 68
	LSHIFT  shift 69
	RSHIFT  shift 70
	ARSHIFT  shift 71
	XOR  shift 72
	NEQ  shift 73
	SLT  shift 74
	SLE  shift 75
	AND  shift 76
	OR  shift 77
	EQUAL  shift 78
	LT  shift 79
	LE  shift 80
	GT  shift 81
	GE  shift 82
	SGT  shift 83
	SGE  shift 84
	$end  reduce 103


state 20
	expr : lval .  (95)

	.  reduce 95


state 21
	expr : letstart . IN expr  (96)

	IN  shift 85
	.  error


state 22
	expr : constexp .  (92)

	.  reduce 92


state 23
	program : stmtlist EOF .  (1)

	.  reduce 1


state 24
	callstmt : ID . LPAREN arguments RPAREN  (27)
	lval : ID . optindex opttyp  (60)
	optindex : .  (63)

	LPAREN  shift 86
	LSQUARE  shift 52
	SEMI  reduce 63
	COLON  reduce 63
	PLUS  reduce 63
	MINUS  reduce 63
	DIVIDE  reduce 63
	MOD  reduce 63
	SMOD  reduce 63
	TIMES  reduce 63
	SDIVIDE  reduce 63
	LSHIFT  reduce 63
	RSHIFT  reduce 63
	ARSHIFT  reduce 63
	XOR  reduce 63
	NEQ  reduce 63
	SLT  reduce 63
	SLE  reduce 63
	AND  reduce 63
	OR  reduce 63
	EQUAL  reduce 63
	LT  reduce 63
	LE  reduce 63
	ASSIGN  reduce 63
	GT  reduce 63
	GE  reduce 63
	SGT  reduce 63
	SGE  reduce 63

	optindex  goto 53


state 25
	stmt : COMMENT .  (8)

	.  reduce 8


state 26
	stmt : SEMI .  (13)

	.  reduce 13


state 27
	lcurlyrule : LCURLY .  (50)

	.  reduce 50


state 28
	jmpstmt : CJMP . LPAREN expr COMMA expr COMMA expr RPAREN  (15)

	LPAREN  shift 87
	.  error


state 29
	jmpstmt : JMP . LPAREN expr RPAREN  (14)

	LPAREN  shift 88
	.  error


state 30
	vardecls : VAR . idents COLON typ SEMI  (46)

	ID  shift 89
	.  error

	idents  goto 90
	revidents  goto 91


state 31
	labelstmt : LABEL . ID COLON  (17)

	ID  shift 92
	.  error


state 32
	callstmt : CALL . expr LPAREN arguments RPAREN  (26)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	.  error

	expr  goto 93
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 33
	simplestmt : ASSERT . expr  (22)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	.  error

	expr  goto 94
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 34
	simplestmt : HALT . expr  (21)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	.  error

	expr  goto 95
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 35
	specialstmt : SPECIAL . LPAREN STRING RPAREN  (16)

	LPAREN  shift 96
	.  error


state 36
	simplestmt : RETURN . optexpr  (20)
	optexpr : .  (28)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	SEMI  reduce 28

	expr  goto 97
	optexpr  goto 98
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 37
	optextern : EXTERN .  (38)

	.  reduce 38


state 38
	simplestmt : expr .  (19)
	expr : expr . PLUS expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . TIMES expr  (69)
	expr : expr . DIVIDE expr  (70)
	expr : expr . SDIVIDE expr  (71)
	expr : expr . MOD expr  (72)
	expr : expr . SMOD expr  (73)
	expr : expr . LSHIFT expr  (74)
	expr : expr . RSHIFT expr  (75)
	expr : expr . ARSHIFT expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . XOR expr  (79)
	expr : expr . EQUAL expr  (80)
	expr : expr . NEQ expr  (81)
	expr : expr . LT expr  (82)
	expr : expr . LE expr  (83)
	expr : expr . SLT expr  (84)
	expr : expr . SLE expr  (85)
	expr : expr . GT expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . SGT expr  (88)
	expr : expr . SGE expr  (89)

	PLUS  shift 62
	MINUS  shift 63
	DIVIDE  shift 64
	MOD  shift 65
	SMOD  shift 66
	TIMES  shift 67
	SDIVIDE  shift 68
	LSHIFT  shift 69
	RSHIFT  shift 70
	ARSHIFT  shift 71
	XOR  shift 72
	NEQ  shift 73
	SLT  shift 74
	SLE  shift 75
	AND  shift 76
	OR  shift 77
	EQUAL  shift 78
	LT  shift 79
	LE  shift 80
	GT  shift 81
	GE  shift 82
	SGT  shift 83
	SGE  shift 84
	SEMI  reduce 19


state 39
	revstmtlist : revstmtlist stmt .  (3)

	.  reduce 3


state 40
	stmt : jmpstmt . SEMI  (5)

	SEMI  shift 99
	.  error


state 41
	stmt : specialstmt . SEMI  (6)

	SEMI  shift 100
	.  error


state 42
	stmt : labelstmt .  (7)

	.  reduce 7


state 43
	stmt : simplestmt . SEMI  (9)

	SEMI  shift 101
	.  error


state 44
	stmt : func .  (10)

	.  reduce 10


state 45
	stmt : vardecls .  (11)

	.  reduce 11


state 46
	stmt : stmtblock .  (12)

	.  reduce 12


state 47
	simplestmt : assignment .  (18)

	.  reduce 18


state 48
	simplestmt : callstmt .  (23)

	.  reduce 23


state 49
	assignment : lval . ASSIGN expr  (24)
	assignment : lval . ASSIGN callstmt  (25)
	expr : lval .  (95)

	ASSIGN  shift 102
	SEMI  reduce 95
	PLUS  reduce 95
	MINUS  reduce 95
	DIVIDE  reduce 95
	MOD  reduce 95
	SMOD  reduce 95
	TIMES  reduce 95
	SDIVIDE  reduce 95
	LSHIFT  reduce 95
	RSHIFT  reduce 95
	ARSHIFT  reduce 95
	XOR  reduce 95
	NEQ  reduce 95
	SLT  reduce 95
	SLE  reduce 95
	AND  reduce 95
	OR  reduce 95
	EQUAL  reduce 95
	LT  reduce 95
	LE  reduce 95
	GT  reduce 95
	GE  reduce 95
	SGT  reduce 95
	SGE  reduce 95


state 50
	func : optextern . funtyp ID LPAREN formals RPAREN optbody  (34)

	TYP  shift 103
	TVOID  shift 104
	.  error

	funtyp  goto 105
	typ  goto 106
	basetyp  goto 107


state 51
	stmtblock : lcurlyrule . stmtlist RCURLY  (51)
	revstmtlist : .  (4)

	.  reduce 4

	stmtlist  goto 108
	revstmtlist  goto 6


state 52
	optindex : LSQUARE . expr RSQUARE  (64)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	.  error

	expr  goto 109
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 53
	lval : ID optindex . opttyp  (60)
	opttyp : .  (61)

	COLON  shift 110
	$end  reduce 61
	LPAREN  reduce 61
	RPAREN  reduce 61
	SEMI  reduce 61
	RSQUARE  reduce 61
	COMMA  reduce 61
	IN  reduce 61
	PLUS  reduce 61
	MINUS  reduce 61
	DIVIDE  reduce 61
	MOD  reduce 61
	SMOD  reduce 61
	TIMES  reduce 61
	SDIVIDE  reduce 61
	LSHIFT  reduce 61
	RSHIFT  reduce 61
	ARSHIFT  reduce 61
	XOR  reduce 61
	NEQ  reduce 61
	SLT  reduce 61
	SLE  reduce 61
	AND  reduce 61
	OR  reduce 61
	EQUAL  reduce 61
	LT  reduce 61
	LE  reduce 61
	ASSIGN  reduce 61
	GT  reduce 61
	GE  reduce 61
	SGT  reduce 61
	SGE  reduce 61

	opttyp  goto 111


state 54
	constexp : INT COLON . typ  (100)

	TYP  shift 103
	.  error

	typ  goto 112
	basetyp  goto 107


state 55
	expr : LPAREN expr . RPAREN  (66)
	expr : expr . PLUS expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . TIMES expr  (69)
	expr : expr . DIVIDE expr  (70)
	expr : expr . SDIVIDE expr  (71)
	expr : expr . MOD expr  (72)
	expr : expr . SMOD expr  (73)
	expr : expr . LSHIFT expr  (74)
	expr : expr . RSHIFT expr  (75)
	expr : expr . ARSHIFT expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . XOR expr  (79)
	expr : expr . EQUAL expr  (80)
	expr : expr . NEQ expr  (81)
	expr : expr . LT expr  (82)
	expr : expr . LE expr  (83)
	expr : expr . SLT expr  (84)
	expr : expr . SLE expr  (85)
	expr : expr . GT expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . SGT expr  (88)
	expr : expr . SGE expr  (89)

	RPAREN  shift 113
	PLUS  shift 62
	MINUS  shift 63
	DIVIDE  shift 64
	MOD  shift 65
	SMOD  shift 66
	TIMES  shift 67
	SDIVIDE  shift 68
	LSHIFT  shift 69
	RSHIFT  shift 70
	ARSHIFT  shift 71
	XOR  shift 72
	NEQ  shift 73
	SLT  shift 74
	SLE  shift 75
	AND  shift 76
	OR  shift 77
	EQUAL  shift 78
	LT  shift 79
	LE  shift 80
	GT  shift 81
	GE  shift 82
	SGT  shift 83
	SGE  shift 84
	.  error


state 56
	expr : NAME LPAREN . ID RPAREN  (94)

	ID  shift 114
	.  error


state 57
	expr : CAST LPAREN . expr RPAREN ID COLON typ  (97)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	NAME  shift 11
	CAST  shift 12
	LET  shift 13
	TRUE  shift 14
	FALSE  shift 15
	UNKNOWN  shift 16
	MINUS  shift 17
	NOT  shift 18
	.  error

	expr  goto 115
	lval  goto 20
	letstart  goto 21
	constexp  goto 22


state 58
	letstart : LET ID . optindex opttyp ASSIGN expr  (65)
	optindex : .  (63)

	LSQUARE  shift 52
	COLON  reduce 63
	ASSIGN  reduce 63

	optindex  goto 116


state 59
	expr : UNKNOWN STRING .  (93)

	.  reduce 93


state 60
	expr : expr . PLUS expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . TIMES expr  (69)
	expr : expr . DIVIDE expr  (70)
	expr : expr . SDIVIDE expr  (71)
	expr : expr . MOD expr  (72)
	expr : expr . SMOD expr  (73)
	expr : expr . LSHIFT expr  (74)
	expr : expr . RSHIFT expr  (75)
	expr : expr . ARSHIFT expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . XOR expr  (79)
	expr : expr . EQUAL expr  (80)
	expr : expr . NEQ expr  (81)
	expr : expr . LT expr  (82)
	expr : expr . LE expr  (83)
	expr : expr . SLT expr  (84)
	expr : expr . SLE expr  (85)
	expr : expr . GT expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . SGT expr  (88)
	expr : expr . SGE expr  (89)
	expr : MINUS expr .  (91)

	.  reduce 91


state 61
	expr : expr . PLUS expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . TIMES expr  (69)
	expr : expr . DIVIDE expr  (70)
	expr : expr . SDIVIDE expr  (71)
	expr : expr . MOD expr  (72)
	expr : expr . SMOD expr  (73)
	expr : expr . LSHIFT expr  (74)
	expr : expr . RSHIFT expr  (75)
	expr : expr . ARSHIFT expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . XOR expr  (79)
	expr : expr . EQUAL expr  (80)
	expr : expr . NEQ expr  (81)
	expr : expr . LT expr  (82)
	expr : expr . LE expr  (83)
	expr : expr . SLT expr  (84)
	expr : expr . SLE expr  (85)
	expr : expr . GT expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . SGT expr  (88)
	expr : expr . SGE expr  (89)
	expr : NOT expr .  (90)

	.  reduce 90

